force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BankAccountNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>