force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__BankCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__BankCodeText__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BankCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>