force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__CardBrandName__c.field-meta.xml
<CustomField>
    <fullName>ssot__CardBrandName__c</fullName>
    <label>Card Brand</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CardBrandName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>