force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__DigitalWalletProviderName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalWalletProviderName__c</fullName>
    <label>Digital Wallet Provider</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalWalletProviderName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>