force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__ExpiryMonth__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpiryMonth__c</fullName>
    <label>Expiry Month</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpiryMonth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>