force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__Last4Text__c.field-meta.xml
<CustomField>
    <fullName>ssot__Last4Text__c</fullName>
    <label>Last 4</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Last4Text</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>