force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__PaymentProcessorName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentProcessorName__c</fullName>
    <label>Payment Processor Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentProcessorName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>