force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__ProcessorReferenceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessorReferenceName__c</fullName>
    <label>Processor Reference</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessorReferenceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>