force-app/main/default/objects/ssot__PaymentInstrument__dlm/fields/ssot__rel_1731039795698_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039795698_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentInstrument_AccountId_map_Acco_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PaymentInstrument_AccountId_map_Acco_rel</relationshipLabel>
    <relationshipName>rel_1731039795698_end</relationshipName>
    <type>Lookup</type>
</CustomField>